feature:     - login / logout 로그인시 상태바꾸게 수정     - 챗페이지 대충 개발

--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -3,8 +3,14 @@
 @tailwind utilities;
 
 @layer base {
+  html {
+    @apply h-full;
+  }
   body {
-    @apply bg-gray-900 text-white;
+    @apply bg-gray-900 text-white h-full;
+  }
+  #__next {
+    @apply flex flex-col min-h-full;
   }
   input {
     @apply text-gray-900;
